--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/flash-list": "2.0.2",
+    "buffer": "^6.0.3",
+    "exceljs": "^4.4.0",
     "expo": "~54.0.0",
     "expo-location": "~19.0.7",
+    "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-fs": "^2.20.0",
