--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
     "@react-native-firebase/firestore": "^20.5.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/flash-list": "2.0.2",
@@ -42,6 +43,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.1.0",
     "react-native-share": "^12.2.0",
+    "react-native-svg": "^15.14.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.15.0",
     "xlsx": "^0.18.5"
