--- a/firestore-import/package.json
+++ b/firestore-import/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "firestore-import",
   "version": "1.0.0",
   "description": "",
@@ -15,6 +15,7 @@
     "axios": "^1.12.2",
     "csv-parser": "^3.2.0",
     "firebase-admin": "^13.5.0",
-    "googleapis": "^150.0.1"
+    "googleapis": "^150.0.1",
+    "streamifier": "^0.1.1"
   }
 }
