--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/flash-list": "2.0.2",
+    "axios": "^1.13.2",
     "buffer": "^6.0.3",
     "exceljs": "^4.4.0",
     "expo": "~54.0.0",
+    "expo-file-system": "17.0.1",
     "expo-location": "~19.0.7",
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
@@ -56,9 +58,6 @@
     "jest": "^29.7.0",
     "jest-expo": "~54.0.12",
     "react-test-renderer": "19.1.0"
-  },
-  "jest": {
-    "preset": "jest-expo"
   },
   "private": true
 }
